# mpc_based_robotmove

myrobot/: README.md
myrobot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
myrobot/install/mybot/lib/mybot/: end_effector_feedback  move_group_interface  set_target_pose  trajectory_buffer_node
myrobot/install/mybot/share/mybot/: package.sh
myrobot/install/mybot/share/mybot/config/: circle21.yaml  circle22.yaml  circle32.yaml  param.yaml  param_1.yaml  planned_trajectory（复件）.txt  processing12.yaml  processing22.yaml  robot_arm_description.ros2_control.xacro  robot_arm_description.srdf  trajectory_5.yaml
myrobot/install/mybot/share/mybot/launch/: setup_assistant.launch.py  spawn_controllers.launch.py  trajectory_subscriber_launch.py  warehouse_db.launch.py
myrobot/install/mybot/share/mybot/src/: Communication.cpp  Trajectory.cpp  Trajectory.hpp  arm_control.cpp  arm_execute_circle.cpp  arm_execute_second_storage_trajectory.cpp  arm_execute_storage(从地上抓起来放到车上).cpp  arm_execute_total_trajectory_second.cpp  arm_execute_total_trajectory_second_final.cpp  arm_execute_total_trajectory_调试用副本.cpp  end_effector_feedback 成功.cpp  set_target_pose.cpp
myrobot/install/robot_arm_description/share/robot_arm_description/: package.bash  package.dsv  package.sh  package.xml  package.zsh
myrobot/install/robot_arm_description/share/robot_arm_description/meshes/: link2.STL  link3.STL  link4.STL  link5.STL
myrobot/install/robot_arm_description/share/robot_arm_description/urdf/: robot_arm_description.urdf
myrobot/log/: latest_build
myrobot/src/mybot/: .setup_assistant  CMakeLists.txt  package.xml
myrobot/src/mybot/config/: circle11.yaml  circle12.yaml  circle31.yaml  default_trajectory.yaml  processing11.yaml  processing21.yaml  processing31.yaml  processing32.yaml  robot_arm_description.urdf.xacro  trajectory_3.yaml
myrobot/src/mybot/launch/: move_group_interface.launch.py  moveit_rviz.launch.py
myrobot/src/mybot/src/: arm_control.h  arm_execute_circle(原来的版本).cpp  arm_execute_total_trajectory.cpp  arm_execute_total_trajectory_final.cpp  trajectory_buffer.cpp  trajectory_subscriber_node.cpp
myrobot/src/robot_arm_description/: setup.cfg
myrobot/src/robot_arm_description/meshes/: link1.STL  link6.STL  link_hand.STL  link_left.STL  link_right.STL
myrobot_final/: README.md  trajectory_1.yaml  trajectory_12.yaml  trajectory_14.yaml  trajectory_18.yaml  trajectory_2.yaml  trajectory_20.yaml  trajectory_21.yaml  trajectory_22.yaml  trajectory_23.yaml  trajectory_3.yaml  trajectory_5.yaml  trajectory_8.yaml
myrobot_final/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
myrobot_final/install/mybot/lib/mybot/: end_effector_feedback  move_group_interface  set_target_pose
myrobot_final/install/mybot/share/ament_index/resource_index/parent_prefix_path/: mybot
myrobot_final/install/mybot/share/mybot/: local_setup.sh  package.sh
myrobot_final/install/mybot/share/mybot/config/: circle21.yaml  circle22.yaml  circle31.yaml  circle32.yaml  planned_trajectory（另一个复件）.txt  processing12.yaml  processing22.yaml  processing32.yaml  trajectory_4.yaml
myrobot_final/install/mybot/share/mybot/src/: Communication.h  Trajectory.hpp  arm_control.cpp  arm_control.h  arm_control修改相对路径前.h  arm_execute.cpp  arm_execute_storage_trajectory.cpp  arm_execute_total_trajectory_second_final.cpp  arm_execute_total_trajectory_second_final_226备份.cpp  arm_execute_total_trajectory_调试用副本.cpp  execute.cpp
myrobot_final/install/robot_arm_description/share/robot_arm_description/: package.ps1  package.sh
myrobot_final/install/robot_arm_description/share/robot_arm_description/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link_hand.STL
myrobot_final/log/: latest_build
myrobot_final/src/mybot/: CMakeLists.txt
myrobot_final/src/mybot/config/: circle11.yaml  circle12.yaml  gazebo_arm_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  param.yaml  processing11.yaml  processing21.yaml  processing31.yaml  robot_arm_description.srdf  ros2_controllers.yaml
myrobot_final/src/mybot/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  my_moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
myrobot_final/src/mybot/src/: Trajectory.cpp  TrajectoryInterpolator.cpp  TrajectoryInterpolator.hpp  arm_control(修改相对路径前).cpp  arm_control_2_17.cpp  arm_execute_circle_trajectory.cpp  arm_execute_processing.cpp  arm_execute_processing_trajectory.cpp  arm_execute_storage.cpp  arm_execute_total_trajectory.cpp  arm_execute_total_trajectory_final._2_26_备份——改动物体大小前cpp  arm_execute_total_trajectory_final_2_27有轨迹.cpp  move_group_interface.cpp  trajectory_buffer.cpp  trajectory_buffer_2_28大改前.cpp  trajectory_buffer_gpt.cpp
myrobot_final/src/robot_arm_description/: setup.py
myrobot_final/src/robot_arm_description/meshes/: link6.STL  link_left.STL  link_right.STL
myrobot_final/src/robot_arm_description/urdf/: robot_arm_description.csv
